--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 MONGODB_URI=mongodb://localhost:27017/chess
 PORT=3000
+SECRET_ACCESS_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoxMjM0NTY3ODkwLCJleHBfdGltZSI6MTY5MjY0NzYwMH0.5qZ5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5
+EXPIRE_ACCESS_TOKEN=2h
+SECRET_REFRESH_TOKEN=dGhpcy1pcy1hLXJlZnJlc2gtdG9rZW4tZm9yLXJlZnJlc2g
+EXPIRE_REFRESH_TOKEN=30d
