--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "description": "",
   "dependencies": {
     "axios": "^1.8.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "socket.io": "^4.8.1",
     "stockfish": "^16.0.0",
